--- a/src/estilo/inicio.css
+++ b/src/estilo/inicio.css
@@ -56,3 +56,64 @@
   background-color: #aff3bd; /* Cor de fundo do botão ao passar o mouse por cima */
 }
 
+
+
+@media only screen and (min-width: 576px) and (max-width: 1024px) {
+  .logo__imgT img {
+    height: 550px; 
+    width: auto;  
+    display: flex;
+    align-items: center;
+    position:relative;
+    left: 220px;
+    margin-top: 80px;
+  }
+  
+  .logo__imgD img {
+    height: 200px; 
+    width: auto;  
+    line-height: 60px;
+    display: flex;
+    align-items: center;
+    margin-top: -190px;
+    position: relative;
+    left: -1100px;
+  }
+  
+  .text h2{
+    position: relative;
+    margin-left: -1350px;
+    margin-top: 240px;
+    font-size: 120px;
+    color: rgba(50, 79, 151, 0.858);
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  }
+  
+  .text h3,
+  .text h4{
+    position:relative;
+    margin-left: -1350px;
+    color:rgba(50, 79, 151, 0.736);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
+    font-weight: 900;
+  }
+  
+  .btn {
+    display: inline-block; /* Torna o botão um elemento de bloco */
+    padding: 10px 20px; /* Adiciona espaço interno ao botão */
+    background-color:  #8cd0cd; /* Cor de fundo do botão */
+    color: #ffffff; /* Cor do texto do botão */
+    text-decoration: none; /* Remove o sublinhado do texto */
+    border-radius: 10px; /* Adiciona bordas arredondadas ao botão */
+    transition: background-color 0.3s; /* Adiciona uma transição suave na mudança de cor de fundo */
+    margin-left: -1150px;
+    margin-top: 10px;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgb(18, 4, 214);
+  }
+  
+  .btn:hover {
+    background-color: #aff3bd; /* Cor de fundo do botão ao passar o mouse por cima */
+  }
+  
