--- a/src/estilo/inicio.css
+++ b/src/estilo/inicio.css
@@ -116,4 +116,65 @@
   .btn:hover {
     background-color: #aff3bd; /* Cor de fundo do botão ao passar o mouse por cima */
   }
+
+  
+@media only screen and (min-width: 350px) and (max-width: 780px) {
+  .logo__imgT img {
+    height: 0px; 
+    width: auto;  
+    display: flex;
+    align-items: center;
+    position:relative;
+    left: 0px;
+    margin-top: 0px;
+  }
+  
+  .logo__imgD img {
+    height: 450px; 
+    width: auto;  
+    line-height: 60px;
+    display: flex;
+    align-items: center;
+    margin-top: px;
+    position: relative;
+    left: 65%;
+    right: 45%;
+  }
+  
+  .text h2{
+    position: relative;
+    margin-left: -40%;
+    margin-top: 120%;
+    font-size: 220px;
+    color: rgba(50, 79, 151, 0.858);
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  }
+  
+  .text h3,
+  .text h4{
+    position:relative;
+    margin-left: -180px;
+    color:rgba(50, 79, 151, 0.736);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.8em;
+    font-weight: 900;
+  }
+  
+  .btn {
+    display: inline-block; /* Torna o botão um elemento de bloco */
+    padding: 10px 20px; /* Adiciona espaço interno ao botão */
+    background-color:  #8cd0cd; /* Cor de fundo do botão */
+    color: #ffffff; /* Cor do texto do botão */
+    text-decoration: none; /* Remove o sublinhado do texto */
+    border-radius: 10px; /* Adiciona bordas arredondadas ao botão */
+    transition: background-color 0.3s; /* Adiciona uma transição suave na mudança de cor de fundo */
+    margin-left: 0px;
+    margin-top: 10px;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgb(18, 4, 214);
+  }
+  
+  .btn:hover {
+    background-color: #aff3bd; /* Cor de fundo do botão ao passar o mouse por cima */
+  }
   
